--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -13,7 +13,7 @@
 @define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
 @define-color error_color oklab(from @error_bg_color max(l, 0.85) a b);
-@define-color window_bg_color #232323;
+@define-color window_bg_color #1c1c1c;
 @define-color window_fg_color #dfdfdf;
 @define-color view_bg_color #1c1c1c;
 @define-color view_fg_color #dfdfdf;
