--- a/hyprland/.config/waybar/style.css
+++ b/hyprland/.config/waybar/style.css
@@ -27,23 +27,19 @@ window#waybar {
 }
 
 #network {
-    padding-right: 12px;
-    font-size: 12.5pt
-}
-
-#tray {
-   padding-right: 0px;
+    padding-right: 8px;
 }
 
 #pulseaudio {
-    font-size: 14pt;
-    padding-right: 12px;
-    padding-left: 4px;
+    font-size: 14.5pt;
+    padding-bottom: 1.5px;
+    padding-right: 6px;
+    padding-left: 8px;
 }
 
 #clock {
     padding-left: 4px;
-    padding-right: 8px;
+    padding-right: 6px;
 }
 
 #battery {
