--- a/hyprland/.config/waybar/style.css
+++ b/hyprland/.config/waybar/style.css
@@ -23,7 +23,7 @@ window#waybar {
 }
 
 #window {
-    padding-left: 6px;
+    padding-left: 5px;
     color: #6f6f6f
 }
 
@@ -34,21 +34,21 @@ window#waybar {
 }
 
 #network {
-    padding-right: 8px;
+    padding-right: 9px;
 }
 
 #pulseaudio {
     font-size: 14.5pt;
     padding-bottom: 1.5px;
-    padding-right: 6px;
+    padding-right: 8px;
     padding-left: 8px;
 }
 
 #clock {
-    padding-left: 4px;
-    padding-right: 6px;
+    padding-left: 5px;
+    margin-right: 5px;
 }
 
 #battery {
-    padding-left: 6px;
+    padding-left: 5px;
 }
