--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -5,7 +5,7 @@ window#waybar {
     padding-left: 2px;
     padding-right: 2px;
     background-color: @bg;
-    border-bottom: 1px solid @inactive
+    border-bottom: 1px solid #404040
 }
 
 #workspaces button {
@@ -19,7 +19,7 @@ window#waybar {
 }
 
 #workspaces button.empty {
-    color: #595959;
+    color: @inactive;
 }
 
 #workspaces button:hover {
@@ -28,17 +28,18 @@ window#waybar {
 
 #window {
     padding-left: 5px;
-    color: #6f6f6f
+    color: @inactive
 }
 
 #tray {
-    background-color: @inactive;
+    background-color: #404040;
     padding-left: 4px;
     padding-right: 4px;
 }
 
 #network {
-    padding-right: 10px
+    padding-right: 10px;
+    color: #808080
 }
 
 #pulseaudio {
@@ -55,4 +56,5 @@ window#waybar {
 
 #battery {
     padding-left: 5px;
+    color: #808080
 }
