--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,14 +1,14 @@
 @define-color bg         #1c1c1c;
 @define-color fg         #dfdfdf;
-@define-color inactive   #5f5f5f;
+@define-color inactive   #595959;
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
-@define-color magenta    #8c729a;
+@define-color magenta    #75607a;
 @define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
 @define-color lime       #8e9760;
-@define-color bright-bg       #232323;
+@define-color bright-bg       #252525;
 @define-color bright-red      #976061;
 @define-color bright-green    #729a72;
 @define-color bright-yellow   #a49a72;
