--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
@@ -53,27 +53,27 @@
 @define-color success_fg_color #dfdfdf;
 @define-color success_color @green_1;
 @define-color warning_bg_color #cd9309;
-@define-color warning_fg_color #272727;
+@define-color warning_fg_color #252525;
 @define-color warning_color @yellow_2;
 @define-color error_bg_color @red_4;
 @define-color error_fg_color #dfdfdf;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #252525;
+@define-color window_bg_color #1c1c1c;
 @define-color window_fg_color #dfdfdf;
 @define-color view_bg_color #1c1c1c;
 @define-color view_fg_color #dfdfdf;
 @define-color headerbar_bg_color #252525;
 @define-color headerbar_fg_color #dfdfdf;
 @define-color headerbar_border_color #dfdfdf;
-@define-color headerbar_backdrop_color #1c1c1c;
-@define-color headerbar_shade_color #272727;
+@define-color headerbar_backdrop_color #252525;
+@define-color headerbar_shade_color #252525;
 @define-color headerbar_darker_shade_color #1c1c1c;
 @define-color sidebar_bg_color #252525;
 @define-color sidebar_fg_color #dfdfdf;
 @define-color sidebar_backdrop_color #1c1c1c;
-@define-color sidebar_shade_color #272727;
-@define-color sidebar_border_color #272727;
-@define-color card_bg_color #272727;
+@define-color sidebar_shade_color #252525;
+@define-color sidebar_border_color #404040;
+@define-color card_bg_color #252525;
 @define-color card_fg_color #dfdfdf;
 @define-color card_shade_color rgba(0, 0, 6, 0.36);
 @define-color dialog_bg_color #2d2d2d;
