--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -13,29 +13,29 @@
 @define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
 @define-color error_color oklab(from @error_bg_color max(l, 0.85) a b);
-@define-color window_bg_color #252525;
+@define-color window_bg_color #1c1c1c;
 @define-color window_fg_color #dfdfdf;
 @define-color view_bg_color #1c1c1c;
 @define-color view_fg_color #dfdfdf;
 @define-color headerbar_bg_color #252525;
 @define-color headerbar_fg_color #dfdfdf;
-@define-color headerbar_border_color #272727;
-@define-color headerbar_backdrop_color #1c1c1c;
-@define-color headerbar_shade_color #272727;
-@define-color headerbar_darker_shade_color #272727;
+@define-color headerbar_border_color #252525;
+@define-color headerbar_backdrop_color #252525;
+@define-color headerbar_shade_color #252525;
+@define-color headerbar_darker_shade_color #1c1c1c;
 @define-color sidebar_bg_color #252525;
 @define-color sidebar_fg_color #dfdfdf;
 @define-color sidebar_backdrop_color #252525;
-@define-color sidebar_shade_color #272727;
-@define-color sidebar_border_color #272727;
+@define-color sidebar_shade_color #252525;
+@define-color sidebar_border_color #404040;
 @define-color secondary_sidebar_bg_color #252525;
 @define-color secondary_sidebar_fg_color #dfdfdf;
 @define-color secondary_sidebar_backdrop_color #252525;
-@define-color secondary_sidebar_shade_color #272727;
-@define-color secondary_sidebar_border_color #272727;
+@define-color secondary_sidebar_shade_color #252525;
+@define-color secondary_sidebar_border_color #252525;
 @define-color card_bg_color RGB(255 255 255/8%);
 @define-color card_fg_color #dfdfdf;
-@define-color card_shade_color #272727;
+@define-color card_shade_color #252525;
 @define-color dialog_bg_color #2c2c2c;
 @define-color dialog_fg_color #dfdfdf;
 @define-color popover_bg_color #2c2c2c;
