--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -38,7 +38,7 @@ window#waybar {
 }
 
 #network {
-    padding-right: 10px;
+    padding-right: 12px;
 }
 
 #pulseaudio {
@@ -49,8 +49,7 @@ window#waybar {
 }
 
 #clock {
-    padding-left: 5px;
-    margin-right: 5px;
+    padding-left: 5px
 }
 
 #battery {
