--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -58,15 +58,15 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color #dfdfdf;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #1c1c1c;
+@define-color window_bg_color #252525;
 @define-color window_fg_color #dfdfdf;
 @define-color view_bg_color #1c1c1c;
 @define-color view_fg_color #dfdfdf;
 @define-color headerbar_bg_color #252525;
 @define-color headerbar_fg_color #dfdfdf;
-@define-color headerbar_border_color #dfdfdf;
+@define-color headerbar_border_color #404040;
 @define-color headerbar_backdrop_color #252525;
-@define-color headerbar_shade_color #252525;
+@define-color headerbar_shade_color #1c1c1c;
 @define-color headerbar_darker_shade_color #1c1c1c;
 @define-color sidebar_bg_color #252525;
 @define-color sidebar_fg_color #dfdfdf;
