--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -21,7 +21,7 @@
 @define-color headerbar_fg_color #dfdfdf;
 @define-color headerbar_border_color #404040;
 @define-color headerbar_backdrop_color #252525;
-@define-color headerbar_shade_color #1c1c1c;
+@define-color headerbar_shade_color #404040;
 @define-color headerbar_darker_shade_color #1c1c1c;
 @define-color sidebar_bg_color #252525;
 @define-color sidebar_fg_color #dfdfdf;
