--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -37,16 +37,21 @@ window#waybar {
 }
 
 #network {
-    padding-right: 16px;
+    padding-right: 18px;
 }
 
 #pulseaudio {
     font-size: 14.5pt;
     padding-bottom: 1.5px;
-    padding-right: 8px;
+    padding-right: 14px;
+}
+
+#custom-power {
+    padding-right: 14px;
+    font-size: 15pt;
+    padding-bottom: 2px
 }
 
 #battery {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 8px;
 }
