--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,6 +1,7 @@
 @import url("./colors.css");
 
 window#waybar {
+    font: 13pt "MesloLGS Nerd Font";
     color: @fg;
     padding-left: 2px;
     padding-right: 2px;
@@ -27,7 +28,8 @@ window#waybar {
 }
 
 #window {
-    color: #6f6f6f
+    color: #6f6f6f;
+    padding-left: 6px
 }
 
 #tray {
@@ -41,7 +43,6 @@ window#waybar {
 }
 
 #pulseaudio {
-    font-size: 14pt;
     padding-right: 16px;
 }
 
