--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 window#waybar {
     color: @fg;
-    background-color: @bg;
+    background-color: rgba(28, 28, 28, 0.8);
     border-bottom: 1px solid #404040
 }
 
