--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,17 +1,17 @@
 @import url("./colors.css");
 
 window#waybar {
-    font: 13.5pt "MesloLGS Nerd Font";
+    font: 13pt "MesloLGS Nerd Font";
     color: @fg;
     background-color: @bg;
-    border-bottom: 1px solid @inactive
+    border-bottom: 1px solid @inactive;
 }
 
 #workspaces button {
     color: @fg;
     min-width: 10px;
     padding: 0 6px;
-    font-size: 12.25pt;
+    font-size: 12pt;
 }
 
 #workspaces button.active {
