--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,6 +1,7 @@
 @import url("./colors.css");
 
 window#waybar {
+    font: 13pt "MesloLGS Nerd Font";
     color: @fg;
     background-color: @bg;
     border-bottom: 1px solid @inactive;
@@ -26,7 +27,7 @@ window#waybar {
 }
 
 #window {
-    padding-left: 5pt
+    padding-left: 2pt
 }
 
 #custom-expand-icon {
@@ -40,7 +41,7 @@ window#waybar {
 }
 
 #network {
-    padding-right: 16pt;
+    padding-right: 17pt;
 }
 
 #pulseaudio {
@@ -49,7 +50,7 @@ window#waybar {
 }
 
 #battery {
-    padding-right: 5pt;
+    padding-right: 8pt;
 }
 
 #clock {
