--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -11,7 +11,8 @@ window#waybar {
     color: @fg;
     min-width: 10px;
     padding: 0 6px;
-    font-size: 12.5pt
+    font-size: 12.5pt;
+    padding-bottom: 0.5px
 }
 
 #workspaces button.active {
