--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -35,12 +35,17 @@ window#waybar {
 }
 
 #network {
-    padding-right: 16pt;
+    padding-right: 15pt;
+}
+
+#bluetooth {
+    padding-right: 8pt;
+    font-size: 13.5pt;
 }
 
 #pulseaudio {
-    font-size: 14pt;
-    padding-right: 14pt;
+    font-size: 11.5pt;
+    padding-right: 17pt;
 }
 
 #battery {
