--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url("./colors.css");
 
 window#waybar {
-    font: 13.5pt "MesloLGS Nerd Font";
+    font: 13.5pt "JetBrainsMono Nerd Font";
     background-color: @bg;
     border-bottom: 1px solid #393939
 }
@@ -45,7 +45,7 @@ window#waybar {
 }
 
 #pulseaudio {
-    font-size: 11pt;
+    font-size: 11.5pt;
     padding-right: 16pt;
 }
 
