--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url("./colors.css");
 
 window#waybar {
-    font: 13pt "Inter";
+    font: 13.125pt "JetBrainsMono Nerd Font";
     background-color: @bg;
     border-bottom: 1px solid lighter(@bright-bg);
 }
@@ -46,7 +46,7 @@ window#waybar {
 
 #pulseaudio {
     font-size: 11.25pt;
-    padding-right: 14.5pt;
+    padding-right: 15pt;
 }
 
 #battery {
